Fixed drop down appearing behind slideshow
It was an overflow hidden issue... ugh.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,7 +156,7 @@ body>#container {
 	/*width: 100%;*/
 	/*padding: 20px 20px 5px;*/
 	*top:-50px;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	/*float: left;*/
 }
 
